# fastcrud-example

./: alembic.ini  fakers.py  j_h.json  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  storage.py  utils.py
app/admin/: author.py  author_profile.py  category.py  manager.py  movie.py  movie_preview.py  user.py
app/filters/: author.py  author_profile.py  category.py  manager.py  movie.py  movie_preview.py  user.py
app/graphql/: error.py  response.py  router.py  schema.graphql  schema.py
app/internal/: admin.py  base_models.py  base_repository.py  filters.py  repository_manager.py  response.py
app/models/: auth.py  author.py  author_profile.py  category.py  enums.py  manager.py  many_to_many.py  movie.py  movie_preview.py  user.py
app/repositories/: author.py  author_profile.py  category.py  manager.py  movie.py  movie_preview.py  user.py
app/routers/: auth.py  author.py  author_profile.py  category.py  manager.py  movie.py  movie_preview.py  user.py
app/services/: auth.py  token.py
common/admin/: __init__.py  configs.py  exceptions.py  fields.py  helpers.py  main.py  models.py
common/filters/: __init__.py  base.py  exceptions.py  fields.py  sqlalchemy.py
common/templates/: 404.html  create.html  edit.html  error.html  forbidden.html  index.html  layout.html  list.html  login.html  show.html  utils.js
common/types/: __init__.py  file_field.py  phone_number.py
migrations/: env.py
migrations/versions/: 28453487df9f_.py  3166d041f025_.py  509e1761ce5c_.py  5c7f1f81426d_.py  6a3a72642aea_.py  (+10 more)
templates/: index.html
(+53 files in other folders)
